# mev-arb-bot

./: .dockerignore  .env.production  ARCHITECTURE.md  AUDIT.md  BUILD_SCRIPT.md  COMPETITIVE_ANALYSIS.md  COMPLETE_CODE_ANALYSIS.md  COMPLETE_CODE_SINGLE_PAGE.rs  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPONENT_INTERACTIONS.md  CPP_QUEEN_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOY_NOW.sh  Dockerfile  ENGINE_SETUP.md  FINAL_DEPLOYMENT_GUIDE.md  FLASH_LOAN_DEPLOYMENT_GUIDE.md  FULL_CPP_OPTIMIZATION_ANALYSIS.md  FULL_IMPLEMENTATION_PLAN.md  HONEST_COMPETITIVE_ANALYSIS.md  HONEST_ENGINE_AUDIT.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  LATENCY_OPTIMIZATION_ANALYSIS.md  LATENCY_OPTIMIZATION_GUIDE.md  LATENCY_OPTIMIZATION_IMPLEMENTED.md  MASTERPIECE_IMPLEMENTATION_ROADMAP.md  ORACLE_CLOUD_DEPLOYMENT.md  ORACLE_CLOUD_SHELL_DEPLOY.md  PHASE_5_COMPLETION_SUMMARY.md  PHASE_6_DEPLOYMENT_SUMMARY.md  PRODUCTION_APP_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_INTEGRATION_SUMMARY.md  PRODUCTION_README.md  PRODUCTION_SPEC_ANALYSIS.md  QUEEN_LANGUAGE_ANALYSIS.md  QUICK_START.md  (+30 more)
app/: _layout.tsx  vps-connect.tsx
app/(tabs)/: _layout.tsx  deploy.tsx  history.tsx  index.tsx  opportunities.tsx  settings.tsx
app/lib/: api-client.ts  keeper-service.ts
app/screens/: DashboardScreen.tsx  SettingsScreen.tsx
backend/: server.ts
components/ui/: icon-symbol.tsx
constants/: oauth.ts
contracts/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/artifacts/@balancer-labs/v2-interfaces/contracts/vault/IAuthorizer.sol/: IAuthorizer.dbg.json
contracts/artifacts/@openzeppelin/contracts/utils/Context.sol/: Context.dbg.json
contracts/artifacts/contracts/BalancerFlashLoanReceiver.sol/: BalancerFlashLoanReceiver.json
contracts/artifacts/contracts/EliteAntArb.sol/: EliteAntArb.dbg.json  EliteAntArb.json  IERC20.json  IFlashLoanSimpleReceiver.json  IPool.json  IUniswapV2Pair.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: BalancerFlashLoanReceiver.sol  EliteAntArb.sol
contracts/scripts/: deploy-balancer.ts  deploy.ts
contracts/test/: EliteAntArb.test.ts
contracts/typechain-types/: hardhat.d.ts  index.ts
contracts/typechain-types/contracts/: BalancerFlashLoanReceiver.ts  index.ts
contracts/typechain-types/contracts/EliteAntArb.sol/: EliteAntArb.ts  IUniswapV2Pair.ts  index.ts
contracts/typechain-types/factories/contracts/: BalancerFlashLoanReceiver__factory.ts  index.ts
contracts/typechain-types/factories/contracts/EliteAntArb.sol/: EliteAntArb__factory.ts  IERC20__factory.ts  IFlashLoanSimpleReceiver__factory.ts  IPool__factory.ts  IUniswapV2Pair__factory.ts  index.ts
engine/: index.js  package.json
keeper/: Dockerfile  index.ts  optimized-keeper.ts  package.json
keeper-prod/: package.json
keeper-prod/src/: index.js
keeper-rust/: Cargo.toml
keeper-rust/src/: main.rs
keeper/lib/: batch-rpc.ts  bellman-ford-optimized.ts  bellman-ford.ts  calldata-encoder.ts  direct-executor.ts  event-driven-keeper.ts  latency-benchmark.ts  mempool-watcher.ts  mev-risk-detector.ts  pool-cache.ts  pool-state-tracker.ts  profit-validator.ts  request-dedup.ts  risk-manager.ts  slippage-calculator.ts  websocket-listener.ts
keeper/src/: activator.ts  bundle-builder.ts  config.ts  index.ts  risk-engine.ts  router.ts  state.ts  types.ts  ws-server.ts
lib/: alchemy.ts  bot-context.tsx  bot-store.ts  keeper-api.ts  keeper-context.tsx  trpc.ts  vps-client.ts
rust-core/: Cargo.toml
rust-core/src/: bellman_ford.rs  calldata_encoder.rs  keeper.rs  lib.rs  profit_simulator.rs  queen.rs  scanner.rs
rust-engine/: Cargo.toml
rust-engine/src/: config.rs  detector.rs  keeper.rs  keeper_fast.rs  lib.rs  main_fast.rs  queen.rs  scanner.rs  server.rs  stigmergy.rs  supercolony.rs  types.rs  utils.rs
scanner/: Cargo.toml  Dockerfile
scanner-prod/: Cargo.toml
scanner-prod/src/: main.rs
scanner-rust/: Cargo.toml
scanner-rust/src/: main.rs
scanner/src/: config.rs  engine.rs  keeper.rs  main.rs  metrics.rs  pairs.rs  scanner.rs
server/: bot-router.ts  routers.ts  scanner.ts  ws-server.ts
server/_core/: aave-flash-loan-executor.ts  alchemy-websocket.ts  api-routes.ts  balancer-flash-loan-executor.ts  batch-rpc-caller.ts  error-recovery.ts  event-driven-pool-monitor.ts  event-driven-production-executor.ts  final-ultra-low-latency-engine.ts  flash-loan-executor.ts  flashbots-relay-executor.ts  health-monitor.ts  index.ts  mev-engine.ts  mev-protection-system.ts  mev-protection.ts  optimized-mev-protection.ts  optimized-pool-monitor.ts  optimized-production-executor.ts  optimized-transaction-executor.ts  production-engine-integrated.ts  production-executor.ts  production-hardening.ts  production-transaction-executor.ts  production-wallet-manager.ts  real-pool-monitor.ts  rust-optimized-engine.ts  transaction-executor.ts  types.ts  ultra-fast-engine.ts  ultra-low-latency-engine.ts  wallet-manager.ts  websocket-pool-sync.ts
server/_core/__tests__/: final-engine.test.ts  production-executor.test.ts  rust-optimized-engine.test.ts  system-integration.test.ts  ultra-fast-engine.test.ts  ultra-low-latency.test.ts
shared/: router-types.ts  scanner-types.ts
supercolony/: CMakeLists.txt
supercolony/include/: supercolony.h
supercolony/src/: detection_engine.cpp  mev_protection.cpp  pheromone_broadcaster.cpp  pool_monitor.cpp  transaction_builder.cpp  transaction_executor.cpp  worker_group.cpp
supercolony_rust/: Cargo.toml
supercolony_rust/src/: alchemy_integration.rs  alchemy_monitor.rs  arbitrage_detector.rs  benchmarks.rs  capital_allocator.rs  collective_learning.rs  executor.rs  executor_advanced.rs  integration_tests.rs  main.rs  main_production.rs  pheromone.rs  pheromone_advanced.rs  profit_manager.rs  route_graph.rs  scout.rs  scout_enhanced.rs  signal_propagation.rs  supercolony.rs  supercolony_orchestrator.rs  transaction_executor.rs  types.rs
tests/: arbitrage-engine.test.ts  bot-engine.test.ts  real-engine.test.ts  vps-scanner.test.ts
(+1 files in other folders)
