[package]
name = "elite-keeper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "elite-keeper"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
zmq = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
prometheus = "0.13"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
