[package]
name = "mev-arb-engine"
version = "1.0.0"
edition = "2021"
authors = ["MEV Arbitrage Team"]
description = "Ultra-low latency MEV arbitrage engine for Polygon"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Blockchain
ethers = { version = "2.0", features = ["ws"] }
web3 = "0.19"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Performance
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"

# Testing
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
