[package]
name = "elite-scanner"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "scanner"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
ethers = { version = "2.0", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zmq = "0.10"
axum = "0.7"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
futures = "0.3"
