[package]
name = "elite-scanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "elite-scanner"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tungstenite = "0.23"
tokio-tungstenite = "0.23"
zmq = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
parking_lot = "0.12"
prometheus = "0.13"
lazy_static = "1.4"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
config = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
