[package]
name = "elite-scanner"
version = "1.0.0"
edition = "2021"
description = "Elite MEV Arbitrage Scanner — Rust WebSocket pool event listener for Polygon"

[[bin]]
name = "elite-scanner"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio          = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util   = "0.3"

# Ethereum / ABI
ethers         = { version = "2", features = ["ws", "rustls"] }
ethabi         = "18"

# HTTP client (for Keeper IPC + gas price)
reqwest        = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Logging
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Config
dotenvy        = "0.15"

# Metrics (Prometheus)
prometheus     = "0.13"
lazy_static    = "1"

# Utilities
anyhow         = "1"
thiserror      = "1"
tokio-retry    = "0.3"
chrono         = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
