[package]
name = "supercolony_rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Web3 and blockchain
ethers = { version = "2" }
web3 = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency primitives
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "5.5"

# Time and performance
chrono = "0.4"
instant = "0.1"

# Redis for pheromones
redis = { version = "0.24", features = ["aio", "tokio-comp", "json"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Crypto
sha2 = "0.10"
hex = "0.4"

# Math and utilities
num-bigint = "0.4"
num-traits = "0.2"

# Performance benchmarking
criterion = "0.5"

# Testing
proptest = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
